# CommonTools

./: .gitmodules  run_clangformat.py
boost-build/features/: chimera.jam  coverage.jam  freertos.jam  freertos_features.jam  thor.jam  thor_features.jam
boost-build/rules/: explicit-alias.jam
boost-build/targets/coverage/: build.jam
boost-build/toolsets/: README.txt  gcc_arm_none_eabi.jam  user-config.jam
cmake/: bootstrap.cmake
cmake/device/: am335x.cmake  host.cmake  stm32f4x.cmake  stm32l4x.cmake
cmake/device/am335x/: CMakeLists.txt
cmake/device/generic/: CMakeLists.txt
cmake/device/stm32f4x/: CMakeLists.txt
cmake/device/stm32l4/: CMakeLists.txt
cmake/device/stm32l4x/: CMakeLists.txt
cmake/options/: common.cmake  freertos.cmake  thor.cmake  toolchain.cmake  validator.cmake
cmake/templates/: PreLoad.cmake
cmake/testing/: testing_selector.cmake
cmake/threading/: threading_selector.cmake
cmake/toolchains/: arm_linux_gnueabihf.cmake  gcc.cmake  gcc_arm_none_eabi.cmake  linker_whole_archive.cmake
cmake/utility/: CTDevTools.cmake  CTEmbedded.cmake  CTTesting.cmake  embedded.cmake
generators/: gen_chimera_driver.py  gen_embedded_driver.py
generators/Chimera/source/drivers/peripherals/adc/: adc_intf.hpp  adc_types.hpp  adc_user.hpp  chimera_adc.cpp
generators/Thor/hld/adc/: CMakeLists.txt  hld_adc_chimera.cpp  hld_adc_chimera.hpp  hld_adc_driver.cpp  hld_adc_driver.hpp  hld_adc_types.cpp
generators/Thor/lld/interface/adc/: CMakeLists.txt  adc_detail.hpp  adc_intf.cpp  adc_intf.hpp  adc_prv_data.hpp  adc_types.hpp
generators/Thor/lld/stm32l4x/adc/: CMakeLists.txt  hw_adc_data.cpp  hw_adc_driver.cpp  hw_adc_prj.hpp  hw_adc_types.hpp
generators/Thor/lld/stm32l4x/adc/variant/: hw_adc_register_stm32l432kc.cpp  hw_adc_register_stm32l432kc.hpp  hw_adc_register_stm32l4xxxx.hpp
generators/resources/c_cpp/: file_description.txt  readme.txt
generators/src/: c_cpp_resources.py  resource_types.py
generators/src/chimera_driver/: generator.py
generators/src/embedded/: argument_types.py  c_cpp_resources.py  configuration_types.py  generator.py  resource_types.py
generators/src/embedded/projects/: interface.py
generators/src/embedded/projects/apollo/: prj_apollo.py
generators/src/embedded/projects/chimera/: gen_normal.py  gen_peripheral.py  periph_cmake_template.txt  periph_driver_template.txt  periph_intf_template.txt  periph_types_template.txt  periph_user_template.txt  prj_chimera.py
generators/src/embedded/projects/thor/: gen_hld.py  gen_lld.py  gen_lld_intf.py  prj_thor.py  targets.py
generators/src/embedded/projects/thor/hld/: hld_chimera_cpp_template.txt  hld_chimera_hpp_template.txt  hld_cmake_template.txt  hld_driver_cpp_template.txt  hld_driver_hpp_template.txt  hld_types_template.txt
generators/src/embedded/projects/thor/lld/: cmake_template.txt  data_template.txt  driver_template.txt  prj_template.txt  register_general_hpp_template.txt  register_specific_cpp_template.txt  register_specific_hpp_template.txt  types_template.txt
generators/src/embedded/projects/thor/lld_intf/: cmake_template.txt  detail_hpp_template.txt  intf_cpp_template.txt  intf_hpp_template.txt  prv_data_hpp_template.txt  types_hpp_template.txt
googletest/: CMakeLists.txt  build.jam
googletest/vs/GTestSuiteMSVC/: GTestSuiteMSVC.sln
googletest/vs/GTestSuiteMSVC/GTestSuiteMSVC/: GTestSuiteMSVC.cpp  GTestSuiteMSVC.vcxproj  GTestSuiteMSVC.vcxproj.filters
jlink/am335x/: bbb_ram_init.JLinkScript  output.txt
linker_scripts/am3358/: ddr_ram.ld  ocm_ram.ld
linker_scripts/stm32f4x/: STM32F446RE_flash.lds
linker_scripts/stm32l4x/: STM32L432KB_flash.lds  STM32L432KB_sram.lds  STM32L432KC_flash.lds  STM32L432KC_sram.lds
svd/: STM32F446.svd
